--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -126,6 +126,10 @@ body {
   padding-right: 4em;
 }
 
+.pageContent#homeMenu {
+  margin-top: 1em;
+}
+
 /* Projects */
 
 .projectsList {
@@ -209,12 +213,41 @@ body {
 /* Circles */
 
 .circle {
+  border-radius: 50%;
+  background-color: #000000;
+}
+
+.circle#separator {
   width: 7px;
   height: 7px;
-  border-radius: 50%;
   margin-right: 5px;
-  background-color: #000000;
   display: inline-block;
+}
+
+.circle#menu-mid {
+  width: 55px;
+  height: 55px;
+  margin: 6em auto;
+  background-color: #000000;
+}
+
+.circle#menu-out {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  border-style: solid;
+  border-color: #000000;
+  border-width: 4px;
+  background-color: transparent;
+  z-index: 10000;
+  overflow: hidden;
+}
+
+#menuDiv {
+  margin: 0 auto;
+  width: 666px;
+  height: 339px;
+
 }
 
 /* Form */
