--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -153,19 +153,19 @@ body {
   padding-right: 10.5em;
 }
 
-.project button {
+.project a {
   display: inline-block;
   padding: 0;
   margin-top: 1em;
 }
 
 .project img {
-  width: 40em;
+  width: 27em;
   display: block;
 }
 
 .project-rectangle {
-  width: 68px;
+  width: 20%;
   height: 5px;
   background-color: #000000;
 }
@@ -291,36 +291,46 @@ body {
 
 .modal {
   display: none;
-  position: fixed;
   z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
+  width: 40%;
+  height: 90%;
+  overflow: hidden;
   background-color: #ffffff;
+  border-width: 6px;
+  border-color: #000000;
+  border-style: solid;
+  border-radius: 12px;
+}
+
+.modal-title {
+  font-family: 'Raleway-Semibold';
+  font-size: 1.8em;
 }
 
 .modal-content {
-  background-color: #ffffff;
-  margin: 15% auto;
-  padding: 2em;
-  border: 2px solid #000000;
-  width: 80%;
-  border-radius: 5px;
+  font-family: 'Raleway';
+  font-size: 1em;
+  margin-top: 0.5em;
 }
 
-.modal-close {
-  color: #000000;
-  float: right;
-  font-size: 2em;
-  font-weight: bold;
+.modal-content img {
+  width: 100%;
+  margin: 0 auto;
 }
 
-.modal-close:hover, .modal-close:focus {
-  color: #3e3e3e;
-  text-decoration: none;
-  cursor: pointer;
+.modal-action {
+  width: 30%;
+  margin: 0 auto;
+  position: relative;
+  margin-top: 4em;
+}
+
+.modal-action a {
+  display: block;
+  background-color: #000000;
+  color: #ffffff;
+  text-align: center;
+  padding: 0.5em 0.3em;
 }
 
 /* Mobile Phones */
