--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -191,7 +191,7 @@ body {
 
 .pageFooter ul {
   margin-left: -2.3em;
-  margin-top: 1.5em;
+  margin-top: 0;
 }
 
 .pageFooter a {
@@ -204,9 +204,6 @@ body {
   list-style: none;
   width: 40px;
   height: 40px;
-  border-radius: 50%;
-  margin-right: 5px;
-  background-color: #000000;
   display: inline-block;
 }
 
@@ -292,6 +289,7 @@ body {
 .modal {
   display: none;
   z-index: 1;
+  position: relative;
   width: 40%;
   height: 90%;
   overflow: hidden;
@@ -300,6 +298,7 @@ body {
   border-color: #000000;
   border-style: solid;
   border-radius: 12px;
+  margin: 0 auto;
 }
 
 .modal-title {
@@ -321,16 +320,18 @@ body {
 .modal-action {
   width: 30%;
   margin: 0 auto;
-  position: relative;
-  margin-top: 4em;
+  position: absolute;
+  bottom: 2rem;
 }
 
 .modal-action a {
-  display: block;
   background-color: #000000;
   color: #ffffff;
   text-align: center;
+  position: relative;
+  margin: 0 auto;
   padding: 0.5em 0.3em;
+  display: block;
 }
 
 /* Mobile Phones */
